src/Adstacy/AppBundle/Resources/public/less/layout/show_ad.less
@import "../variables.less";
@import "../mixins.less";

#show-advert {
  position: relative;
  width: 1000px;
  margin: 14px auto;

  .panel-body {
    padding: 10px;
    border-bottom: 1px solid @border-color;

    &:last-child {
      border-bottom: 0;
    }
  }
}

#show-advert-content {
  width: 750px;
  float: left;

  .show-advert-desc {
    font-size: 14px;

    p {
      margin: 0;
    }
  }
}

#show-advert-toolbar {
  &.panel-body {
    border: 0;
  }
  .btn-group > .btn-promote {
    margin-left: 0;
    margin-right: 1px;
    width: 100px;
    height: 30px;
  }

  .btn-group > .btn-promote:not(:first-child):not(:last-child) {
    .border-left-radius(@border-radius-small);
  }

  .promotes-count {
    font-weight: bold;
  }

  .owner-action-label {
    display: inline-block;
    margin-left: 4px;
  }

  .owner-action {
    display: inline-block;
  }
}


#show-advert-img {
  text-align: center;

  img {
    .img-responsive(inline-block);
  }
}

#show-advert-owner {
  width: 236px;
  margin-left: 14px;
  float: left;

  .user-desc {
    width: 174px;
  }
}

#user-about {
  color: #555;
  font-size: 13px;

  p {
    margin: 0;
  }
}

#user-latest-adverts {
  width: 234px;
  padding: 10px 10px 0;

  .thumb {
    border: 1px solid @border-color;
    width: 102px;
    height: 102px;
    float: left;
    margin: 0 10px 10px 0;
    border-radius: @border-radius-base;

    img {
      border-radius: @border-radius-small;
    }

    &:nth-child(2n) {
      margin-right: 0;
    }
  }
}

#show-advert-long-desc {
  width: 750px;
  overflow-y: auto;
}

#show-advert-comment {
  form {
    margin-top: 10px;
  }

  .form-group {
    margin-bottom: 0;
  }

  .media-body {
    font-size: 14px;
  }
  .media-heading {
    a:hover {
      text-decoration: none;
    }

    & > small {
      color: #aaa;
      font-size: 14px;
    }

    & > time {
      color: #aaa;
      font-size: 12px;
    }
  }

  .comment-box {
    background-color: #f4f4f4;
    border: 1px solid @border-color;
    .border-bottom-radius(@border-radius-base);
    height: 46px;
    padding: 4px 8px;
    resize: none;
    width: 100%;

    &:focus {
      outline: none;
      background-color: #fff;
    }
  }
}

@media screen and (max-width: @screen-tablet) {
  .panel {
    border-radius: 0;
  }

  #show-advert, #show-advert-content, #show-advert-long-desc {
    width: 100% !important;
    float: none;
  }

  #show-advert-owner {
    position: static;
    float: none;
    width: 100%;
    margin: 0;
    margin-top: 10px;
  }

  #user-latest-adverts {
    width: 100%;
    text-align: center;
  }

  #show-advert-long-desc {
    img {
      margin-bottom: 10px;
      max-width: 100%;
    }
  }
  #show-advert-toolbar {
    .social-label, .owner-action-label {
      display: none;
    }
  }
}

@media screen and (max-width: 480px) {
  .comment {
    img {
      width: 30px;
      height: 30px;
    }
    .media-heading {
      line-height: 0;
      margin: 0;
    }
    .media-heading a {
      font-size: 13px;
    }
    .media-heading small {
      font-size: 12px;
    }
    span.time {
      font-size: 11px;
    }
    p {
      font-size: 12px;
    }
  }
}

@media screen and (max-width: 240px) {
  #show-advert-toolbar {
    text-align: center;
    .owner-action {
      display: block;
      width: 100%;
      .btn {
        display: block;
        margin-top: 5px;
        width: 100%;
      }
      .owner-action-label {
        display: inline-block;
      }
    }
  }
}

